update cdn api
